added ui for mentors card

--- a/frontend/src/shared/scss/_properties.scss
+++ b/frontend/src/shared/scss/_properties.scss
@@ -1,7 +1,9 @@
 :root {
     // COLOR
-    --color-background: #0d0714;
-    --color-accent: #640095;
+    --color-background: #fff;
+    --color-background-alt: #f5f8fa;
+    --color-accent: #9575cd;
+    --color-accent-alt: #ffd54f;
     --color-main: #0a0064;
     --color-text-main: #fff;
     --color-border: #777;
