--- a/frontend/src/shared/scss/_properties.scss
+++ b/frontend/src/shared/scss/_properties.scss
@@ -7,6 +7,7 @@
     --color-main: #0a0064;
     --color-text-main: #fff;
     --color-border: #777;
+    --color-main-text: #2f3a4a;
 
     // FONT SIZE
     --h1-font-size: 70px;
