--- a/frontend/src/app/layout/header/header.module.scss
+++ b/frontend/src/app/layout/header/header.module.scss
@@ -8,18 +8,38 @@
     justify-content: space-between;
 
     width: 100%;
-    height: 50px;
+    height: 100px;
     margin-bottom: 50px;
-    padding: 16px;
+    padding: 0 40px;
+
+    background-color: var(--color-background-alt);
 }
 
 .logo {
-    border-radius: 16px;
+    border-radius: 50%;
 }
 
-.actions {
+.left {
     display: flex;
-    flex-direction: row;
-    gap: 5px;
+    gap: toRem(24);
     align-items: center;
+}
+
+.nav {
+    display: flex;
+    gap: toRem(16);
+    text-decoration: none;
+}
+
+.navLinks {
+    font-size: toRem(21);
+    font-weight: 400;
+    line-height: toRem(28);
+    color: var(--color-main-text);
+    text-decoration: none;
+}
+
+.right {
+    display: flex;
+    gap: toRem(4);
 }
