--- a/frontend/src/shared/scss/_properties.scss
+++ b/frontend/src/shared/scss/_properties.scss
@@ -5,9 +5,9 @@
     --color-accent: #9575cd;
     --color-accent-alt: #ffd54f;
     --color-main: #0a0064;
-    --color-text-main: #fff;
     --color-border: #777;
     --color-main-text: #2f3a4a;
+    --color-text-alt: #f5f8fa;
 
     // FONT SIZE
     --h1-font-size: 70px;
