--- a/frontend/src/shared/scss/_globals.scss
+++ b/frontend/src/shared/scss/_globals.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     font-family: "Roboto", sans-serif;
-    color: var(--color-text-main);
+    color: var(--color-main-text);
 }
 
 body {
