--- a/frontend/src/shared/ui/tag/tag.module.scss
+++ b/frontend/src/shared/ui/tag/tag.module.scss
@@ -1,19 +1,20 @@
 .tag {
     display: flex;
-    font-size: toRem(12);
-    line-height: toRem(16);
-    font-weight: 500;
-    color: #2F3A4A;
+
     padding: toRem(4) toRem(8);
-    border-radius: toRem(16);
+    border-radius: 20px;
+
+    font-size: toRem(12);
+    font-weight: 500;
+    line-height: toRem(16);
+    color: var(--color-main-text);
 }
 
 .subject {
-    color: #F5F8FA;
-    background-color: purple;
+    color: var(--color-text-alt);
+    background-color: var(--color-accent);
 }
 
 .type {
-    background-color: yellow;
-    color: #2F3A4A;
+    background-color: var(--color-accent-alt);
 }
