--- a/frontend/src/shared/scss/_properties.scss
+++ b/frontend/src/shared/scss/_properties.scss
@@ -8,6 +8,9 @@
     --color-text-main: #fff;
     --color-border: #777;
     --color-main-text: #2f3a4a;
+    --color-secondary-text: #6b7b8f;
+    --color-tag-subject: #9575cd;
+    --color-tag-type: #ffd54f;
 
     // FONT SIZE
     --h1-font-size: 70px;
