--- a/frontend/src/pages/detailed-request-page/detailed-request-page.module.scss
+++ b/frontend/src/pages/detailed-request-page/detailed-request-page.module.scss
@@ -1,6 +1,156 @@
-.div {
-    padding: 30px;
-    border-radius: 7px;
+.page {
+    width: 1520px;
+    padding: 0 50px;
+}
+
+.hero {
+    z-index: 10;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 1520px;
+    height: 86px;
+    margin-bottom: 40px;
+    padding: 0 40px;
+}
+
+.bg {
+    content: "";
+
+    position: absolute;
+    z-index: 1;
+    top: 150px;
+    right: 0;
+    left: 0;
+
+    height: 86px;
+
+    background-color: var(--color-accent);
+}
+
+.icon {
+    z-index: 10;
+}
+
+.title {
+    z-index: 10;
+
+    font-size: toRem(36);
+    font-weight: 600;
+    line-height: toRem(44);
+    color: var(--color-background-alt);
+}
+
+.tags {
+    left: 0;
+    display: flex;
+    margin: 0 0 32px;
+}
+
+.descriptions {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 16px;
+
+    max-width: 1335px;
+    margin-bottom: 32px;
+
     color: var(--color-main-text);
-    background-color: var(--color-background-alt);
+
+    &__title {
+        font-size: toRem(28);
+        font-weight: 600;
+        line-height: toRem(44);
+    }
+
+    &__text {
+        display: flex;
+        flex-wrap: wrap;
+
+        max-width: 1335px;
+
+        font-size: toRem(16);
+        font-weight: 600;
+        line-height: toRem(24);
+    }
+}
+
+.wrapper {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.left,
+.right {
+    width: 670px;
+}
+
+.subjects {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    margin-bottom: 32px;
+
+    color: var(--color-main-text);
+
+    &__title {
+        font-size: toRem(28);
+        font-weight: 600;
+        line-height: toRem(44);
+    }
+
+    &__tags {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+    }
+}
+
+.file {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    margin-bottom: 32px;
+
+    color: var(--color-main-text);
+
+    &__title {
+        font-size: toRem(28);
+        font-weight: 600;
+        line-height: toRem(44);
+    }
+
+    &__download {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+a {
+    text-decoration: none;
+}
+
+.services {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    color: var(--color-main-text);
+
+    &__title {
+        font-size: toRem(28);
+        font-weight: 600;
+        line-height: toRem(44);
+    }
+
+    &__tags {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+    }
 }
