--- a/frontend/src/shared/ui/icon/icon.module.scss
+++ b/frontend/src/shared/ui/icon/icon.module.scss
@@ -8,3 +8,9 @@
     font-weight: 600;
     line-height: toRem(28);
 }
+
+.lg {
+    font-size: toRem(36);
+    font-weight: 600;
+    line-height: toRem(44);
+}
