--- a/frontend/src/shared/ui/tag/tag.module.scss
+++ b/frontend/src/shared/ui/tag/tag.module.scss
@@ -19,3 +19,8 @@
     color: var(--color-main-text);
     background-color: var(--color-tag-type);
 }
+
+.secondary {
+    color: var(--color-main-text);
+    background-color: var(--color-background-alt);
+}
