--- a/frontend/src/entities/mentor/ui/mentor.module.scss
+++ b/frontend/src/entities/mentor/ui/mentor.module.scss
@@ -47,6 +47,13 @@
 
             width: 100%;
         }
+
+        .rating {
+            display: flex;
+            flex-direction: row;
+            gap: toRem(10);
+            align-items: center;
+        }
     }
 }
 
